--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -2,24 +2,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100%;
   height: 209px;
   background-color: #000000;
   color: white;
-  gap: 28px;
 }
 
 .TextFooter {
   display: flex;
   justify-content: center;
   font-weight: 500;
-  width: 513px;
-  height: 46px;
 }
 
 .LogoFooter {
+  display: flex;
   color: white;
   width: 122px;
   height: 39px;
+  margin-top: 50px;
 }
