--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -2,23 +2,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   width: 100%;
   height: 209px;
   background-color: #000000;
   color: white;
+  margin-top: 40px;
 }
 
 .TextFooter {
-  display: flex;
-  justify-content: center;
   font-weight: 500;
+  padding: 30px 0 0 0;
 }
 
 .LogoFooter {
-  display: flex;
   color: white;
-  width: 122px;
-  height: 39px;
+  height: 36px;
   margin-top: 50px;
 }
