--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 html,
 body,
-#root,
-.main {
+#root {
   height: 100%;
 }
 
@@ -16,7 +16,6 @@ body,
   display: flex;
   width: 100%;
   justify-content: center;
-  background-color: gray;
 }
 
 .content {
@@ -27,4 +26,21 @@ body,
   background-color: white;
   align-items: flex-start;
   padding: 40px 100px;
+}
+
+.home-content {
+  display: flex;
+  width: 100%;
+  padding-top: 43px;
+  flex-direction: column;
+}
+
+.home-cards {
+  display: flex;
+  gap: 60px;
+  background: #f6f6f6;
+  padding: 56px 50px;
+  border-radius: 25px;
+  margin-top: 43px;
+  flex-wrap: wrap;
 }
