add page error404

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,32 @@ body,
   margin-top: 43px;
   flex-wrap: wrap;
 }
+
+.error404 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.error {
+  font-size: 288px;
+  font-weight: 700;
+  color: #ff6060;
+  margin: 0;
+}
+
+.text {
+  color: #ff6060;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 159px;
+}
+
+.textInfo {
+  color: #ff6060;
+  font-weight: 500;
+  font-size: 36px;
+  margin: 0;
+}
