--- a/src/Components/PhotoHead/style.css
+++ b/src/Components/PhotoHead/style.css
@@ -11,4 +11,20 @@
   color: white;
   font-size: 48px;
   font-weight: 500;
+  position: relative;
+  overflow: hidden;
+}
+
+.head-shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: black;
+  opacity: 0.3;
+  z-index: 0;
+}
+.head-text {
+  z-index: 1;
 }
