--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: white;
+  color: #ff6060;
 }
 
 html,
@@ -57,19 +58,37 @@ body,
   font-size: 288px;
   font-weight: 700;
   color: #ff6060;
-  margin: 0;
+  margin: 66px 0 0 0;
 }
 
 .text {
   color: #ff6060;
   font-size: 18px;
   font-weight: 500;
-  margin-top: 159px;
+  margin: 66px 0 0 0;
 }
 
 .textInfo {
   color: #ff6060;
   font-weight: 500;
   font-size: 36px;
-  margin: 0;
+  margin-bottom: 182px;
+}
+
+.title-product {
+  font-size: 36px;
+  font-weight: 500;
+  margin: 30px 0 0 0;
+}
+
+.location-product {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.info-product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
