--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,26 @@ body,
   align-items: center;
   justify-content: space-between;
 }
+
+.dropdown {
+  display: flex;
+  width: 100%;
+  height: 52px;
+
+  justify-content: space-between;
+  margin-top: 24px;
+}
+
+.description {
+  display: flex;
+  align-items: center;
+  background-color: #ff6060;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  min-width: 582px;
+  border-radius: 10px;
+  padding-left: 20px;
+  border: none;
+  cursor: pointer;
+}
