--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,19 @@ body,
   gap: 76px;
   margin-top: 24px;
 }
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.about-collapse {
+  display: flex;
+  flex-direction: column;
+  min-width: 1023px;
+  margin-top: 30px;
+  gap: 30px;
+}
