--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@ body,
   margin-bottom: 182px;
 }
 
+.content-product {
+  width: 100%;
+}
+
 .title-product {
   font-size: 36px;
   font-weight: 500;
@@ -99,7 +103,7 @@ body,
   margin-top: 24px;
 }
 
-.about-content {
+.about-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -110,7 +114,8 @@ body,
 .about-collapse {
   display: flex;
   flex-direction: column;
-  min-width: 1023px;
+  width: 100%;
+  max-width: 1023px;
   margin-top: 30px;
   gap: 30px;
 }
