--- a/src/Components/Caroussel/style.css
+++ b/src/Components/Caroussel/style.css
@@ -28,6 +28,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0 23px 0 23px;
-  min-width: 1240px;
+  width: 100%;
   cursor: pointer;
+  position: absolute;
 }
