--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -28,3 +28,28 @@
 .NavHeader a.active {
   text-decoration: underline;
 }
+
+@media (max-width: 375px) {
+  .Header {
+    display: flex;
+    width: 100%;
+  }
+
+  .header-logo {
+    height: 47px;
+  }
+
+  .NavHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 140px;
+    height: 17px;
+    gap: 10px;
+  }
+
+  .NavHeader a {
+    font-size: 12px;
+    line-height: 17px;
+  }
+}
