--- a/src/index.css
+++ b/src/index.css
@@ -132,4 +132,25 @@ body,
     border-radius: 10px;
     gap: 20px;
   }
+
+  .error {
+    font-size: 96px;
+    line-height: 136px;
+  }
+
+  .textInfo {
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    font-size: 18px;
+    margin: 11px 0 0 0;
+    line-height: 25px;
+    min-width: 260px;
+    height: 52px;
+  }
+
+  .text {
+    font-size: 14px;
+  }
 }
