--- a/src/Components/Host/style.css
+++ b/src/Components/Host/style.css
@@ -18,3 +18,15 @@
   height: 64px;
   border-radius: 50px;
 }
+
+@media (max-width: 375px) {
+  .hots-picture {
+    width: 32px;
+    height: 32px;
+  }
+
+  .host-name {
+    font-size: 12px;
+    line-height: 17px;
+  }
+}
