--- a/src/Components/Tag/style.css
+++ b/src/Components/Tag/style.css
@@ -17,3 +17,13 @@
   white-space: nowrap;
   padding: 0 20px;
 }
+
+@media (max-width: 375px) {
+  .tag {
+    border-radius: 5 px;
+    height: 18px;
+    min-width: 84px;
+    font-size: 10px;
+    line-height: 14px;
+  }
+}
